# iPIC3D

./: .gitignore  CMakeLists.txt  README  iPIC3D.cpp
PSKOutput3D/: PSKhdf5adaptor.cpp
catalyst/: Adaptor.cxx  Adaptor.h  CMakeLists.txt
catalyst/scripts/: run.sh  servers.pvsc
cmake/sites/: README.txt  default.cmake
communication/: Com3DNonblk.cpp  VCtopology3D.cpp
docs/: README.md  _config.yml  contribute.md  features.md  gallery.md  index.html  index.md  inputfiles.html  inputfiles.md  install.md  landing.md  running.html  simulation.md  visualization.md
docs/_data/: documentation_menu.yml  example_footer_menu.yml  home_callouts.yml  navigation.yml
docs/_posts/: 2010-03-01-Multi-scale-simulations-of-plasma-with-iPIC3D.markdown  2013-01-26-Formation-of-a-transient-front-structure-near-reconnection-point-in-3-D-PIC-simulations.markdown  2013-06-01-High-Performance-Solvers-for-Implicit-Particle-in-Cell-Simulation.markdown  2019-05-01-Particle-in-cell-simulation-of-plasma-dynamics-in-cometary-environment.markdown  2019-06-08-Multi-GPU-Acceleration-of-the-iPIC3D-Implicit-Particle-in-Cell-Code.markdown
docs/_products/: product1.md
docs/assets/css/: jumbotron.css
docs/assets/js/: toggle_nav.js
docs/blog/: index.html
env/deep/: ipic  ipic-getstripe  ipic-offload  ipic-parallel  ipic-setjob  ipic-setstripe  ipicrun15x15meshjob  job.sh
env/judge/: ipic  ipic-base  ipic-parallel  ipicrun15x15meshjob  isession  job.sh
env/lie/: ipic
env/miclogin/: ipic  ipic-base  ipic-mic  ipic-mic-base  ipic-mic-parallel  ipic-parallel
env/miclogin/old/: ipic  ipic-mic  ipic-mic-base  ipic-mic-parallel
env/pfe/: ipic  ipic-parallel
env/stampede/: impi-mic  ipic  ipic-base  ipic-getstripe  ipic-mic  ipic-mic-base  ipic-parallel  ipic-setjob  ipic-setstripe  ipicrun15x15meshjob  isession  job.sh  ssh-mic0s
fields/: EMfields3D.cpp
grids/: Grid3DCU.cpp
include/: Basic.h  BcParticles.h  BlockCommunicator.h  Collective.h  Com3DNonblk.h  Connection.h  EMfields3D.h  MPIdata.h  OutputWrapperFPP.h  PSKOutput.h  PSKhdf5adaptor.h  ParallelIO.h  Particles3D.h  Particles3Dcomm.h  Restart3D.h  VCtopology3D.h  WriteOutputParallel.h  errors.h  iPic3D.h  input_array.h  ipichdf5.h  phdf5.h
inputfiles/: CMakeLists.txt  DebyeScaleTurbulence.inp  DebyeScaleTurbulenceRestart.inp  DipoleInjection.inp  DipoleRB.inp  GEM.inp  GEM2D.inp  GEM2DWithTestParticles.inp  GEM2D_B0z0.0.inp  GEMEnergPclsLarge.inp  GEMEnergPclsSmall.inp  Gary.inp  LargeIvy.inp  Magnetosphere2D.inp  MagnetotailReconEngParticle.inp  NullPoints.inp  Ram8TestParticles.inp  RamGL.inp  TaylorGreen.inp  catalyst_viz_B.py  catalyst_viz_rhoe.py  storePersistenceDiagram.py  testGEM.inp  testGEM2D_NoHDF5.inp  testGEM2Dsmall.inp  testGEM3Dsmall.inp  testMagnetosphere2Dsmall.inp  testParticle.inp
inputoutput/: OutputWrapperFPP.cpp  ParallelIO.cpp  Restart3D.cpp  WriteOutputParallel.cpp  phdf5.cpp
ivytestfiles/: LargeIvy.inp
main/: Collective.cpp  Parameters.cpp  iPIC3Dlib.cpp  iPic3Dlib.cpp
particles/: Particles3D.cpp  Particles3Dcomm.cpp
performances/: Timing.cpp
postprocessing_tools/hdf5/: HDF5_2_VTK  HDF5_2_VTK.cpp  HDF5_Particles.cpp  HDF5_ParticlesDist.cpp  HDF5_ParticlesDistMerged.cpp  HDF5_TestParticles.cpp  blackdog_makefile.conv  mac_makefile.conv  makefile.conv  pHDF5_PclSplit.cpp
solvers/: CG.cpp  GMRES.cpp
utility/: Basic.cpp  MPIdata.cpp  TimeTasks.cpp  debug.cpp  errors.cpp
